--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,7 @@ fa-facebook-f,fa-twitter,fa-instagram{
     .slide img{
         width: auto;
         height: 100%;
-        object-position: -100vw;
+        object-position: center;
     }
 }
 @media (max-width: 768px) {
